validacion de porcentaje correcta

--- a/Formulario/css/stylePorcentaje.css
+++ b/Formulario/css/stylePorcentaje.css
@@ -1,10 +1,10 @@
 * {
-    background-color: #61a35b;
+    background-color: #b8e0b5;
     font-size: Times;
     padding: 0;
 }
 
 p {
     font-size: 16px;
-    color: #c465bf;
+    color: #5927e6;
 }
